Añado parrafo en index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <p>Nuevo párrafo</p>
 </head>
 <body>
   <h1>Primera aplicacion con cotrol de versión</h1>
