--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,11 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>
+                    Nueno parrafoi, no importa el contenido porque estoy aprendiendo git y no a programar, ya me preocuparé opr este tema...
+                </p>
+
+                
             </div>
         </div>
     </body>
