--- a/blogpost.html
+++ b/blogpost.html
@@ -1,3 +1,37 @@
+Reportar un problema
+Resolución de conflictos al hacer un merge
+Fusión de ramas con Git merge
+El comando git merge nos permite crear un nuevo commit con la combinación de dos ramas (la rama donde nos encontramos cuando ejecutamos el comando y la rama que indiquemos después del comando).
+
+# Crear un nuevo commit en la rama master combinando
+# los cambios de la rama cabecera:
+git checkout master
+git merge cabecera
+
+# Crear un nuevo commit en la rama cabecera combinando
+# los cambios de cualquier otra rama:
+git checkout cabecera
+git merge cualquier-otra-rama
+Asombroso, ¿verdad? Es como si Git tuviera super poderes para saber qué cambios queremos conservar de una rama y qué otros de la otra. El problema es que no siempre puede adivinar, sobretodo en algunos casos donde dos ramas tienen actualizaciones diferentes en ciertas líneas en los archivos. Esto lo conocemos como un conflicto y aprenderemos a solucionarlos en la siguiente clase.
+
+Recuerda que al ejecutar el comando git checkout para cambiar de rama o commit puedes perder el trabajo que no hayas guardado. Guarda tus cambios antes de hacer git checkout.
+
+John Freddy Vega
+John Freddy Vega
+Curso Profesional de Git y GitHub
+Curso Profesional de Git y GitHub
+
+Aportes
+100
+Preguntas
+10
+Marcadores
+0
+Archivos y Enlaces
+3
+Archivos
+blogpost.html
+
 <html>
     <head>
         <title>El titulo del post</title>
@@ -6,12 +40,14 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
-                <p>Nueno parrafoi, no importa el contenido porque estoy aprendiendo git y no a programar, ya me preocuparé opr este tema...</p>               
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
