--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Inicia la cabecera, cambio solo en el branch cabecera
+                Inicia la cabecera, cambio solo en el branch cabecera: nuevo cambio
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
